Can't read single channel EXRs #40547

Closed
opened 2014-06-09 11:11:09 +02:00 by Greg Zaal · 7 comments
Member

System Information
Windows 7 64 bit

Blender Version
Broken: Built on 2014-05-26 Hash:06a05e4

Short description of error
Single channel 8-bit EXR files saved from another application just appears black inside Blender. It looks fine in other applications (such as PdPlayer)
Broken file: l1_inc.exr
And here's a file that works fine in blender, that was saved from the same application (Maya): (three channels, 16-bit) http://gregzaal.com/files/l1_irr.exr

Exact steps for others to reproduce the error
Not sure what other programs can save single channel EXRs, but if needed I can provide more.

I know this is technically not a bug, but some error should at least be displayed if single channel EXRs are not supported.

**System Information** Windows 7 64 bit **Blender Version** Broken: Built on 2014-05-26 Hash:06a05e4 **Short description of error** Single channel 8-bit EXR files saved from another application just appears black inside Blender. It looks fine in other applications (such as PdPlayer) Broken file: ![l1_inc.exr](https://archive.blender.org/developer/F93648/l1_inc.exr) And here's a file that works fine in blender, that was saved from the same application (Maya): (three channels, 16-bit) http://gregzaal.com/files/l1_irr.exr **Exact steps for others to reproduce the error** Not sure what other programs can save single channel EXRs, but if needed I can provide more. I know this is technically not a bug, but some error should at least be displayed if single channel EXRs are not supported.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @GregZaal

Added subscriber: @GregZaal
Author
Member

Actually it seems specific to 8-bit single channel images, as 16-bit single channel and 8-bit 3-channel work fine.

Actually it seems specific to 8-bit single channel images, as 16-bit single channel and 8-bit 3-channel work fine.

This issue was referenced by 615f4dc92f

This issue was referenced by 615f4dc92f03d8d08289a0d980c9cdc64acedaec

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 615f4dc92f.

Closed by commit 615f4dc92f.
Author
Member

Thanks!

Thanks!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40547
No description provided.